apps/unifi/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: home
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "UniFi"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "unifi.png"
    gethomepage.dev/description: "Network controller"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-unifi
  hostnames:
    - unifi.stevevaradi.me
  rules:
    - backendRefs:
        - name: unifi
          port: 8443
